# example-service

./: README.md
.github/: build-push_dev.yml
.github/workflows/: build-push.yml  build-push_dev.yml  build_push_processors.tf  build_push_processors.yml  test-tf.yml  test.yml  update-tf.yml
app/: Cargo.toml
app/persistence/: Cargo.toml
app/persistence/src/: main.rs
example-app/: .gitignore  Cargo.toml  README.md
example-app/controller/: Cargo.toml
example-app/controller/src/: lib.rs
example-app/controller/src/openapi/: test1.rs
example-app/db-postgres/: .env  Cargo.toml
example-app/db-postgres/src/: config.rs  embedded.rs  lib.rs  migration.rs
example-app/db-postgres/src/test1_gateway/: mod.rs  query.rs
example-app/db-postgres/tests/: integration_test.rs
example-app/db_postgres/: Cargo.toml
example-app/db_postgres/src/: lib.rs
example-app/domain/: Cargo.toml
example-app/domain/src/: boundaries.rs  lib.rs
example-app/domain/src/entity/: test1.rs
example-app/domain/src/interactors/: mod.rs  test1_mutation.rs  test1_query.rs
example-app/iam-cognito/: Cargo.toml
example-app/iam-cognito/src/: lib.rs
example-app/presenter/: Cargo.toml
example-app/presenter/src/: lib.rs
example-dynamodb-lambda/: Cargo.toml
example-dynamodb-lambda/my-table/: Cargo.toml
example-dynamodb-lambda/my-table/src/: main.rs
example-dynamodb-lambda/terraform/: dynamodb-functions.tf
lambda/: Cargo.toml  README.md  serverless.yml
lambda/cognito/src/: main.rs
lambda/postgres/: Cargo.toml
lambda/postgres/src/: main.rs
lambda/terraform/: RELEASES.md  aws_lambda.tf  create-api-resource-tes1.tf  create-api-resource-test2.tf  create-lambda-function-test1.tf  create-lambda-function-test2.tf  data.tf  example-service.tf  example-service_modularized.tf  providers.tf  query-test1.tf  query-test2.tf  service-functions.tf  service-root-function.tf  terraform.auto.tfvars  test2.tf  variables.tf
lambda/test1/: Cargo.toml
lambda/test1/src/: README.md  main.rs
lambda/test2/: Cargo.toml
lambda/test2/src/: README.md  lib.rs  main.rs
lambda/test2/tests/: integration_test.rs
lambda/test3/: Cargo.toml
lambda/test3/src/: lib.rs  main.rs
lambda/test3/tests/: integration_test.rs
