[package]
name = "example-domain"
version = "0.1.5"
authors = ["peterbean410 <peterbean410@gmail.com>"]
edition = "2018"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
futures = "0.3.15"