[package]
name = "my-table"
version = "0.1.5"
edition = "2018"

[dependencies]
chrono = "0.4.19"
domain = { path = "../../example-app/domain" }
tokio = { version = "1.6.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
rusoto_core = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_cognito_idp = { version = "0.42.0", default_features = false, features = ["rustls"] }
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
