[package]
name = "test2"
version = "0.1.5"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros"] }
lambda_http = { git = "https://github.com/coolreader18/aws-lambda-rust-runtime", branch = "tokio1"}
serde_json = "1.0"
controller = { path = "../../example-app/controller" }

[dev-dependencies]
dotenv = "0.15.0"