[package]
name = "test2"
version = "0.1.5"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros"] }
lambda_http = { git = "https://github.com/coolreader18/aws-lambda-rust-runtime", branch = "tokio1"}
serde_json = "1.0"
controller = { path = "../../example-app/controller" }
#jsonwebtoken = "8.0.0-beta.2"
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15.0"